[package]
name = "rpc-toy"
version = "0.1.0"
authors = ["Tarik Eshaq <tarikeshaq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
crossbeam = "0.8"